# PRISMA

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
res/models/: bot.mtl  lamp  lamp.assbin  player  player.assbin
res/scenes/: level1.json  level2.json  levels.json  room.json
shaders/: background.frag  background.vert  color.frag  color.vert  cube.vert  font.frag  font.vert  hud.vert  light.frag  light.vert  texture.frag  texture.vert
src/: main.cpp
src/Camera/: Camera.cpp  Camera.hpp
src/camera/: camera.cpp  camera.hpp
src/font/: font.cpp  font.hpp
src/input/: gamepad_controller_input.cpp  gamepad_controller_input.hpp  input_manager.cpp  input_manager.hpp  keyboard_mouse_input.cpp  keyboard_mouse_input.hpp  user_input.hpp
src/lamp/: Lamp.cpp  Lamp.h
src/mesh/: mesh.cpp  mesh.hpp  mesh_utils.cpp  mesh_utils.hpp
src/orb/: orb.cpp  orb.hpp
src/player/: player.cpp  player.hpp
src/scene/: enums.hpp  scene.cpp  scene.hpp
src/scene_node/: scene_node.cpp  scene_node.hpp
src/shader/: shader.cpp  shader.hpp
src/texture/: texture.cpp  texture.hpp
src/utils/: opengl_utils.cpp  opengl_utils.h
